@@ -1,3 +1,12 @@
+2003-05-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* ntoskrnl/io/cleanup.c (IopCompleteRequest1, IoSecondStageCompletion):
+	Don't dereference Irp->UserEvent here.
+	* ntoskrnl/io/irp.c (IofCallDriver): Reference FileObject.
+	* ntoskrnl/io/rw.c (IopReadWriteIoComplete): New function.
+	* (NtReadFile, NtWriteFile): Set I/O completion routine if using an
+	event that is under object manager control.
+
 2003-05-13  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* ntoskrnl/Makefile (OBJECTS_IO): Add io/rawfs.o.
